# code-sherpa

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  implementation-notes.md  main.py  pipeline.py  pyproject.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: design.md
docs/decisions/: 004-security-architecture.md  005-structured-observation-logging.md  006-coding-agent-selection.md  006-landscape-revalidation-2026-06.md  007-rust-rewrite.md
docs/plans/: 2026-04-03-pipeline-happy-path-design.md
docs/prompts/: code-review.md  implement.md  plan-review.md  plan.md
src/: lib.rs  main.rs
tests/: pipeline.rs  test_main.py  test_pipeline.py
