[package]
name = "code-sherpa"
version = "0.1.0"
edition = "2024"
description = "Pipeline manager for automated coding — guides GitHub Issues from detection to merge"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = "1"
serde_json = "1"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"
