[project]
name = "code-sherpa"
version = "0.1.0"
description = "Pipeline manager for automated coding — guides GitHub Issues from detection to merge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.20.0",
    "pytest>=8.3",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
